# Socratic-knowledge

./: .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  quality.yml  tests.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  FAQ_BY_SCENARIO.md  GUIDES_BY_ROLE.md  INTEGRATION_GUIDE.md  TROUBLESHOOTING.md
examples/: 01_basic_usage.py  02_access_control.py  03_versioning_audit.py  04_rag_integration.py
src/socratic_knowledge/: __init__.py  async_manager.py  bulk.py  code_parser.py  graph.py  knowledge.py  knowledge_base.py  manager.py  models.py  utils.py  versioning.py
src/socratic_knowledge/access/: __init__.py  permissions.py  rbac.py
src/socratic_knowledge/audit/: __init__.py  events.py  logger.py
src/socratic_knowledge/collaboration/: __init__.py  conflict.py  locks.py
src/socratic_knowledge/core/: __init__.py  collection.py  knowledge_item.py  tenant.py  user.py  version.py
src/socratic_knowledge/integrations/: __init__.py
src/socratic_knowledge/integrations/langchain/: __init__.py  tools.py
src/socratic_knowledge/integrations/openclaw/: __init__.py  skill.py
src/socratic_knowledge/retrieval/: __init__.py  indexer.py  rag_integration.py  search.py
src/socratic_knowledge/storage/: __init__.py  base.py  sqlite_store.py
src/socratic_knowledge/versioning/: __init__.py  history.py  version_model.py
tests/: __init__.py  test_module_imports.py
tests/unit/: __init__.py  test_access_control.py  test_audit.py  test_collaboration.py  test_indexer.py  test_knowledge_item.py  test_langchain_tools.py  test_openclaw_skill.py  test_rag_integration.py  test_search.py  test_sqlite_store.py  test_versioning.py
